# music-player

./: CMakeLists.txt  images.qrc
qml/: App.qml  Content.qml  Footer.qml  Header.qml  RoundImage.qml
qml/app/: Footer.qml  Header.qml  Sidebar.qml
qml/app/content/: BannerView.qml  Featured.qml
qml/app/content/featured/: BannerView.qml  MusicCard.qml  NewSong.qml  PopularRadioStation.qml
qml/app/footer/: MusicMetadata.qml  PlayControl.qml  PlayProgressBar.qml  Progress.qml
qml/app/sidebar/: Delegate.qml
qml/common/: RoundImage.qml  Turntable.qml
qml/component/: RoundImage.qml  Turntable.qml
qml/footer/: MusicCover.qml  MusicMetadata.qml  PlayControl.qml  PlayProgressBar.qml
src/: HttpClient.cpp  HttpClient.h  Main.cpp
